[gd_scene load_steps=8 format=3 uid="uid://7typwg5ygvtw"]

[ext_resource type="Script" path="res://head.gd" id="1_17dwf"]
[ext_resource type="PackedScene" uid="uid://cn0j34j8exnjn" path="res://youbal_2.tscn" id="2_lteyt"]
[ext_resource type="PackedScene" uid="uid://dy2je6qpoowx4" path="res://audio_stream_player.tscn" id="4_5cj0d"]
[ext_resource type="PackedScene" uid="uid://f3avy8cwmy5x" path="res://btlw_1_on_1.tscn" id="5_glmos"]
[ext_resource type="Texture2D" uid="uid://cntu3l0xqrkf5" path="res://icon.svg" id="6_5qtui"]
[ext_resource type="PackedScene" uid="uid://bsw3pcpsvly54" path="res://hud.tscn" id="6_6l5vq"]
[ext_resource type="Script" path="res://mastervol.gd" id="7_0dkgb"]

[node name="head" type="Node3D"]
script = ExtResource("1_17dwf")

[node name="AudioStreamPlayer" parent="." instance=ExtResource("4_5cj0d")]
autoplay = true

[node name="effectslayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="effectslayer"]
offset_left = -19.0
offset_top = -13.0
offset_right = 1183.0
offset_bottom = 665.0
color = Color(0, 0, 0, 0)

[node name="pausehud" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect2" type="ColorRect" parent="pausehud"]
offset_left = 86.0
offset_top = 64.0
offset_right = 1100.0
offset_bottom = 622.0
color = Color(0.905882, 0.556863, 0.32549, 1)

[node name="ColorRect" type="ColorRect" parent="pausehud"]
offset_left = 93.0
offset_top = 68.0
offset_right = 1095.0
offset_bottom = 615.0
color = Color(0.509804, 0.721569, 0.439216, 1)

[node name="Icon" type="Sprite2D" parent="pausehud"]
position = Vector2(566, 103)
texture = ExtResource("6_5qtui")

[node name="HSlider" type="HSlider" parent="pausehud"]
offset_left = 133.0
offset_top = 348.0
offset_right = 494.0
offset_bottom = 381.0
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("7_0dkgb")
busname = "Master"

[node name="Label" type="Label" parent="pausehud/HSlider"]
layout_mode = 0
offset_left = 21.0
offset_top = -26.0
offset_right = 346.0
offset_bottom = -3.0
theme_override_font_sizes/font_size = 28
text = "Volume"
horizontal_alignment = 1

[node name="Button" type="Button" parent="pausehud"]
offset_left = 742.0
offset_top = 268.0
offset_right = 817.0
offset_bottom = 318.0
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Button2" type="Button" parent="pausehud"]
offset_left = 684.0
offset_top = 350.0
offset_right = 692.0
offset_bottom = 358.0
theme_override_font_sizes/font_size = 30
text = "save and quit"

[node name="Button3" type="Button" parent="pausehud"]
offset_left = 741.0
offset_top = 445.0
offset_right = 807.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 30
text = "quit"

[node name="Button4" type="Button" parent="pausehud"]
offset_left = 493.0
offset_top = 543.0
offset_right = 501.0
offset_bottom = 551.0
theme_override_font_sizes/font_size = 30
text = "Unpause"

[node name="you" parent="." instance=ExtResource("2_lteyt")]

[node name="hud" parent="." instance=ExtResource("6_6l5vq")]

[node name="btlw1on1" parent="." instance=ExtResource("5_glmos")]
visible = false

[connection signal="pressed" from="pausehud/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="pausehud/Button4" to="." method="_on_button_4_pressed"]
